log/build_2022-06-23_23-53-46/project_2/stderr.log
  File "/home/jetson/Desktop/workspace_2/install/project_2/lib/python3.8/site-packages/project_2/slam_navigation.py", line 72
    self.logger("car pos initial")
    ^
SyntaxError: invalid syntax

